<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Pay Check</string>
    <string name="hint_bill_name">Enter Bill Name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty</string>

    <string name="preference_file_key">com.cusyas.paycheck.PREFERENCE_FILE_KEY</string>
    <string name="most_recent_paid_month_key">com.cusyas.paycheck.most_recent_paid_month</string>
    <string name="bill_notification_hour">com.cusyas.paycheck.notification_hour</string>
    <string name="bill_notification_minute">com.cusyas.paycheck.notification_minute</string>
    <string name="bill_worker_created">com.cusyas.paycheck.bill_worker_created</string>



    <string name="bill_due_on">Due On:&#160;</string>
    <string name="bill_amount_due">Amount Due:&#160;</string>
    <string name="bill_total_amount_due">Total Amount Due:&#160;</string>
    <string name="bill_spinner_text">Bill Due On The:</string>
    <string name="bill_id">billId</string>
    <string name="total_amount_due_view">Total Amount Due:</string>

    <string name="switch_paid">Bill is paid</string>
    <string name="switch_not_paid">Bill is not paid</string>

    <string name="switch_paid_month_advance">Bill is paid a month in advance</string>
    <string name="switch_not_paid_month_advance">Bill is not paid a month in advance</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="bills_header">Bills</string>

    <!-- Bills Preferences -->
    <string name="bill_notification_title">Notification for due bills</string>
    <string name="bills_notification_distance_title">When to send notification</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="bill_notification_time_title">Notification Time</string>

    <!-- Bill Notification Channel info -->
    <string name="channel_bill_notification_name">Bills Due </string>
    <string name="channel_bill_notification_description">Notifications for bills that are due</string>
    <string name="worker_bill_notification_tag">billNotification</string>
    <string name="bill_transition_name">bill_list_transition</string>

</resources>
