<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        tools:context=".NewBillActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_bill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="bottom|right|end"
            android:hint="Bill Name"
            android:paddingTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="Enter Bill Amount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/bill_spinner_text"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="100dp"
                android:entries="@array/day_array"
                android:minWidth="1dp"
                android:paddingTop="10dp"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingTop="20dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_bill_paid"
                style="@style/Widget.MaterialComponents.CompoundButton.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showText="false"
                android:text=""
                android:textSize="18sp" />


            <TextView
                android:id="@+id/switchBillPaidTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/switch_not_paid"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingTop="20dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_bill_paid_month_advance"
                style="@style/Widget.MaterialComponents.CompoundButton.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showText="false"
                android:text=""
                android:textSize="18sp" />


            <TextView
                android:id="@+id/switchMonthAdvanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/switch_not_paid_month_advance"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_save"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Save"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_save_black_24dp"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />








</androidx.constraintlayout.widget.ConstraintLayout>